# python-language-server-experiments

./: .gitignore
.github/workflows/: build-vsix.yml  ci.yml  pydance.yml  pylight.yml
pydance/: .editorconfig  .eslintrc.json  .gitignore  .mocharc.json  .prettierignore  .vscodeignore  esbuild.js  package-lock.json  package.json
pydance/src/: extension.ts
pydance/src/test/: README.md  runIntegrationTest.ts  runMultiRootIntegrationTest.ts  runTest.ts
pydance/src/test/suite/: extension.test.ts  helper.ts  index.ts  mockLanguageServer.ts  vsixIntegrity.test.ts
pydance/src/testFixture/: multi-root.code-workspace  test.py
pydance/src/testFixtureSecond/: second.py
pydance/src/testWorkspaces/: multi-root.code-workspace
pylight/: CLAUDE.md  Cargo.toml  DEVTOOLS.md  FEATURE_PARITY.md  README.md  build.rs
pylight/benches/: parallel_indexing.rs  search.rs  symbol_extraction.rs
pylight/src/: error.rs  file_filter.rs  ignore.rs  lib.rs  python.rs  search.rs  symbols.rs  watcher.rs
pylight/src/index/: files.rs  mod.rs  symbol_index.rs  updater.rs
pylight/src/lsp/: handlers.rs  mod.rs  server.rs
pylight/src/parser/: extractor.rs  mod.rs  python_parser.rs  ruff.rs  tests.rs  trait.rs  tree_sitter.rs
pylight/src/search/: mod.rs
pylight/src/symbols/: mod.rs
pylight/src/watcher/: mod.rs
pylight/static/: devtools.html
pylight/tests/: parallel_indexing_test.rs
pylight/tests/fixtures/: decorators.py  nested.py  simple.py  variables.py
pylight/tests/integration/: mod.rs  test_file_watcher.rs  test_ignore_dirs.rs  test_index.rs  test_lsp.rs  test_search.rs  test_symbol_extraction.rs
