[package]
name = "pylight"
version = "0.3.0"
edition = "2021"


[[bin]]
name = "pylight"
path = "src/bin/pylight.rs"

[[bin]]
name = "pylight_devtools"
path = "src/bin/pylight_devtools.rs"

[dependencies]
walkdir = "2.5.0"
ignore = "0.4"
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.44", features = ["full"] }
num_cpus = "1.16"
async-walkdir = "0.2"
futures-lite = "1.13"
rayon = "1.9.0"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.12.1" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.12.1" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.12.1" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.12.1" }
nucleo-matcher = "0.3.1"
bincode = "1.3"
flate2 = "1.0"
fluent-uri = "0.3"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29"
rustyline = "15.0"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde_json = "1.0.140"
url = "2.5.4"
radix_trie = "0.2.1"
tiny_http = "0.12"
urlencoding = "2.1"
notify = { version = "8.0", features = ["crossbeam-channel"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.5.0"
criterion = "0.5"
pretty_assertions = "1.4"

[[bench]]
name = "symbol_extraction"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "parallel_indexing"
harness = false
